--- a/src/data/posts/microservices.mdx
+++ b/src/data/posts/microservices.mdx
@@ -8,7 +8,7 @@ image: '_next/image?url=%2Fimg%2Fweb-header.jpg&w=3840&q=75'
 
 ### Microservices application: Customers, accounts and money transfers
 
-The code for this article is based on application architecture is based on [microservices](http://microservices.io/patterns/microservices.html), [Event Sourcing](http://microservices.io/patterns/data/event-sourcing.html) and [CQRS](http://microservices.io/patterns/data/cqrs.html).
+The code for this article is based on [microservices](http://microservices.io/patterns/microservices.html), [Event Sourcing](http://microservices.io/patterns/data/event-sourcing.html) and [CQRS](http://microservices.io/patterns/data/cqrs.html).
 It is built using Spring Cloud, Spring Boot and the [Eventuate platform](http://eventuate.io/).
 The application is used in hands-on labs that are part of a [microservices services class](http://www.chrisrichardson.net/training.html) that is taught by [Chris Richardson](http://www.chrisrichardson.net/about.html).
 
