Add note on code

--- a/src/data/posts/kubernetes.mdx
+++ b/src/data/posts/kubernetes.mdx
@@ -9,6 +9,9 @@ image: '_next/image?url=%2Fimg%2Fweb-header.jpg&w=3840&q=75'
 This is a summary of lessons learned from Maximilien Schwarzmüller's course on Docker and Kubernetes. The course can be found here:
 https://www.udemy.com/course/docker-kubernetes-the-practical-guide
 
+Code for this blog can be found here:
+https://github.com/TomSpencerLondon/Docker-And-Kubernetes
+
 ### What is Docker? And Why?
 
 Docker is a container technology. It is a tool for creating and managing containers.
