Add github link

--- a/src/data/posts/terraform-azure-github-actions.mdx
+++ b/src/data/posts/terraform-azure-github-actions.mdx
@@ -13,6 +13,9 @@ https://www.youtube.com/watch?v=PUtLnXCqPVE
 This article was also useful on deploying to Azure using Terraform:
 https://www.blendmastersoftware.com/blog/deploying-to-azure-using-terraform-and-github-actions
 
+The code for this article is available here:
+https://github.com/TomSpencerLondon/terraform-azure
+
 ### Resource group
 The resource group is a container that holds related resources for an Azure solution.
 The resource group can include all the resources for the solution, or only those resources
