Add image for function running on Azure

--- a/src/data/posts/terraform-azure-github-actions.mdx
+++ b/src/data/posts/terraform-azure-github-actions.mdx
@@ -160,3 +160,5 @@ When we push the code to our repository and the GitHub actions run successfully 
 ![image](https://github.com/TomSpencerLondon/LeetCode/assets/27693622/c2c061d4-41a6-46d4-8786-853ea24f0d4f)
 
 
+The function is running on Azure:
+![image](https://github.com/TomSpencerLondon/terraform-azure/assets/27693622/94bab1d6-a799-4763-8df7-26e4ce903e8e)
