--- a/src/data/posts/academy-abcs.mdx
+++ b/src/data/posts/academy-abcs.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Academy, ABCs'
 date: '2020-09-20'
+publishedAt: '2020-09-20'
 ---
 
 Codurance has developed the concept of an Academy as a means of training software engineers to help them along the road to expertise and mastery. Mashooq Badar, Software Craftsman and Co-Founder of Codurance, emphasises that trainees must learn how to learn, that learning itself is a [skill](https://www.youtube.com/watch?v=6oe3JG-Kmw4&feature=youtu.be). Motivation is not enough. An open minded attitude is required as are practices tailored to what you want to learn. He expands on ideas developed by Robert Green in his book [Mastery](https://www.goodreads.com/book/show/13589182-mastery) emphasising the importance for the learner of feeding their curiosity and forming good learning habits. Learners should be encouraged to avoid simply working to a target but to find intrinsic motivation doing the job well for its own sake.
