--- a/src/data/posts/agile.mdx
+++ b/src/data/posts/agile.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Agile, Software Craftsmanship and Extreme Programming'
 date: '2020-06-08'
+publishedAt: '2020-06-08'
 ---
 
 #### Agile
