--- a/src/data/posts/design-patterns.mdx
+++ b/src/data/posts/design-patterns.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'SOLID, 4RSD, Design Patterns and Refactoring'
 date: '2020-06-08'
+publishedAt: '2020-06-08'
 ---
 
 ###### Cohesion and Coupling
