--- a/src/data/posts/git-essentials.mdx
+++ b/src/data/posts/git-essentials.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Git Essentials'
 date: '2022-06-30'
+publishedAt: '2022-06-30'
 summary: 'Git from the bottom up'
 slug: 'git-essentials'
 image: '_next/image?url=%2Fimg%2Fweb-header.jpg&w=3840&q=75'
