--- a/src/data/posts/kubernetes.mdx
+++ b/src/data/posts/kubernetes.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Docker and Kubernetes with AWS ECS and EKS'
 date: '2023-05-02'
+publishedAt: '2023-05-02'
 summary: 'Overview of docker with kubernetes'
 slug: 'docker-kubernetes'
 image: '_next/image?url=%2Fimg%2Fweb-header.jpg&w=3840&q=75'
