--- a/src/data/posts/microservices.mdx
+++ b/src/data/posts/microservices.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Microservices patterns'
 date: '2023-04-10'
+publishedAt: '2023-04-10'
 summary: 'Summary of microservices patterns'
 slug: 'microservices-patterns'
 image: '_next/image?url=%2Fimg%2Fweb-header.jpg&w=3840&q=75'
