--- a/src/data/posts/owasp-top-ten-business.mdx
+++ b/src/data/posts/owasp-top-ten-business.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'OWASP Top Ten Business'
 date: '2020-11-02'
+publishedAt: '2020-11-02'
 ---
 In this article we discuss why the Open Web Application Security Project top ten is important in a business context. The Open Web Application Security Project is a non-profit foundation that works to improve the security of software. The OWASP top ten raises vital issues of software security regularly based on most recent security breaches in the industry. Security can no longer be an afterthought, business leaders and [developers](https://codurance.com/2020/09/07/why-is-owasp-important-for-developers/) need to bake security into their applications from the outset.
 
