--- a/src/data/posts/pitest-coverage.mdx
+++ b/src/data/posts/pitest-coverage.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'PITest Setup with Maven'
 date: '2022-06-28'
+publishedAt: '2022-06-28'
 summary: 'PITest setup with Spring Maven project'
 slug: 'pitest-maven-setup'
 image: '_next/image?url=%2Fimg%2Fweb-header.jpg&w=3840&q=75'
