--- a/src/data/posts/setup-rds-with-postgres.mdx
+++ b/src/data/posts/setup-rds-with-postgres.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Set up AWS RDS with Postgres'
 date: '2022-12-19'
+publishedAt: '2022-12-19'
 ---
 
 Hey fellow AWS Cloud Builders! This is an overview of how to connect to a cloud database RDS instance on AWS.
