--- a/src/data/posts/solutions-architect-associate-intro.mdx
+++ b/src/data/posts/solutions-architect-associate-intro.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Solutions Architect Associate Introduction'
 date: '2022-04-22'
+publishedAt: '2022-04-22'
 ---
 
 I am writing this guide as part of my preparation for the newer AWS Certified Solutions Architect - Associate exam.
