--- a/src/data/posts/spring-external-configuration.mdx
+++ b/src/data/posts/spring-external-configuration.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Spring external configuration'
 date: '2022-07-09'
+publishedAt: '2022-07-09'
 summary: 'External configuration with Spring'
 slug: 'spring-external-configuration'
 image: '_next/image?url=%2Fimg%2Fweb-header.jpg&w=3840&q=75'
