--- a/src/data/posts/terraform-azure-github-actions.mdx
+++ b/src/data/posts/terraform-azure-github-actions.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Azure function with Terraform and Github Actions'
 date: '2023-05-02'
+publishedAt: '2023-05-02'
 summary: 'Overview of terraform, Azure, Terraform and Github Actions deployment'
 slug: 'azure-terraform-github-actions'
 image: '_next/image?url=%2Fimg%2Fweb-header.jpg&w=3840&q=75'
