--- a/src/data/posts/solutions-architect-associate-overview.mdx
+++ b/src/data/posts/solutions-architect-associate-overview.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Solutions Architect Associate Overview'
 date: '2022-05-22'
+publishedAt: '2022-05-22'
 ---
 
 Hey fellow AWS Cloud Builders! This is an overview of the main services covered by the AWS Solutions
