--- a/src/data/posts/spring-aws.mdx
+++ b/src/data/posts/spring-aws.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Spring Framework DevOps on AWS'
 date: '2023-01-20'
+publishedAt: '2023-01-20'
 ---
 
 This is an overview of how to use Spring with AWS. We will look at some of the tools we can use and also provision ec2 instances
