add note on article

--- a/src/data/posts/connecting-to-rds-in-private-subnet.mdx
+++ b/src/data/posts/connecting-to-rds-in-private-subnet.mdx
@@ -59,3 +59,6 @@ Once filled, test the connection, if you have followed above steps along with me
 
 ![Image description](https://dev-to-uploads.s3.amazonaws.com/uploads/articles/9ank1fnydaxm2lc81r3s.png)
 
+
+### Note
+There is also a super easy way to do the above with [777 with AWS RDS](AWS RDS & ElastiCache remote access with Port7777)
