add note on article

--- a/src/data/posts/connecting-to-rds-in-private-subnet.mdx
+++ b/src/data/posts/connecting-to-rds-in-private-subnet.mdx
@@ -61,4 +61,4 @@ Once filled, test the connection, if you have followed above steps along with me
 
 
 ### Note
-There is also a super easy way to do the above with [777 with AWS RDS](AWS RDS & ElastiCache remote access with Port7777)
+There is also a super easy way to connect to private RDS with [7777 and RDS](https://dev.to/slootjes/aws-rds-elasticache-remote-access-with-port7777-2hpn)
