--- a/src/data/posts/ses-secure-email.mdx
+++ b/src/data/posts/ses-secure-email.mdx
@@ -12,7 +12,7 @@ image: '_next/image?url=%2Fimg%2Fweb-header.jpg&w=3840&q=75'
 In the evolving landscape of digital communication, email spoofing poses a significant threat to the integrity of online identities. As a hobby project, and to practice AWS and software design, I have been developing an application called MovieBooker. This application streamlines the process of booking movie tickets and managing movie programs for both moviegoers and staff.
 
 Check out the project on GitHub: [MovieBooker](https://github.com/tom-spencer-organization/MovieBooker)
-
+![Movibooker Architecture](./img/ses-secure-email/image9.png)
 
 ## Email Integration with AWS SES
 
