correct block quote with >

--- a/src/data/posts/aws-for-frontend-devs.mdx
+++ b/src/data/posts/aws-for-frontend-devs.mdx
@@ -10,9 +10,9 @@ image: '_next/image?url=%2Fimg%2Fweb-header.jpg&w=3840&q=75'
 I liked this [article](https://blog.localstack.cloud/aws-for-frontend-devs/) from [Brian Rinaldi](https://www.linkedin.com/in/brianrinaldi) for using AWS as a frontend developer.
 I liked his points about using AWS primitives i.e. that they can help save money and increase understanding of web development.
 I also loved the description of IAM:
-```text
-working with IAM is like untangling a string of Christmas lights only to find that, once untangled, the lights aren't working because one single light, which you can't reliably locate, is not working. It's that fun.
-```
+
+> working with IAM is like untangling a string of Christmas lights only to find that, once untangled, the lights aren't working because one single light, which you can't reliably locate, is not working. It's that fun.
+
 A fellow AWS Community Builder Sedat Salman has also written a nice article is useful for further understanding of IAM:
 https://dev.to/aws-builders/a-beginners-guide-to-aws-identity-and-access-management-iam-4j5c
 
