addition to localstack article

--- a/src/data/posts/aws-for-frontend-devs.mdx
+++ b/src/data/posts/aws-for-frontend-devs.mdx
@@ -1,8 +1,8 @@
 ---
-title: 'AWS for Frontend Developers: LocalStack article code review'
+title: 'AWS plus LocalStack'
 date: '2024-09-28'
 publishedAt: '2024-09-28'
-summary: 'My experience running code locally for aws frontend developers'
+summary: 'My experience running code locally with LocalStack'
 image: '_next/image?url=%2Fimg%2Fweb-header.jpg&w=3840&q=75'
 ---
 
