further link correction

--- a/src/data/posts/aws-for-frontend-devs.mdx
+++ b/src/data/posts/aws-for-frontend-devs.mdx
@@ -227,6 +227,5 @@ aws --endpoint-url=http://localhost:4566 lambda list-functions
 
 ## Conclusion
 I very much enjoyed reading the localstack article and also really liked the time saving that LocalStack offers for running CDK deploys locally.
-This is a great tool and David's article has provided a nice introduction to Frontend development with AWS:
-https://blog.localstack.cloud/aws-for-frontend-devs/
+This is a great tool and David's article has provided a nice introduction to [Frontend development with AWS](https://blog.localstack.cloud/aws-for-frontend-devs/)
 Recommended.
