--- a/src/data/posts/aws-for-frontend-devs.mdx
+++ b/src/data/posts/aws-for-frontend-devs.mdx
@@ -24,12 +24,12 @@ If you are not using AWS locally frequently a common gotcha is setting up AWS CL
 - [AWS CLI](https://aws.amazon.com/cli/)
 - [AWS CDK CLI](https://docs.aws.amazon.com/cdk/v2/guide/getting_started.html#getting_started_install)
 
-To configure CLI locally we can use `aws configure`. This command is used to configure the AWS CLI for general authentication and interaction with AWS services. It sets up credentials for access using access keys, which typically consist of an Access Key ID and a Secret Access Key.
+To configure CLI locally we can use ```aws configure```. This command is used to configure the AWS CLI for general authentication and interaction with AWS services. It sets up credentials for access using access keys, which typically consist of an Access Key ID and a Secret Access Key.
 What it Configures:
 - Access Key ID
 - Secret Access Key
-- Default region (e.g., `us-east-1`)
-- Output format (e.g., `json`, `text`, `yaml`, etc.)
+- Default region (e.g., us-east-1)
+- Output format (e.g., ```json```, `text`, `yaml`, etc.)
 
 You can also use `aws configure sso`. This command is used to configure AWS CLI with Single Sign-On (SSO), which allows users to authenticate using AWS IAM Identity Center (formerly AWS SSO) or an identity provider such as Microsoft Active Directory, Okta, or others.
 
