add rest of bolds

--- a/src/data/posts/aws-for-frontend-devs.mdx
+++ b/src/data/posts/aws-for-frontend-devs.mdx
@@ -29,9 +29,9 @@ What it Configures:
 - Access Key ID
 - Secret Access Key
 - Default region (e.g., us-east-1)
-- Output format (e.g., **json**, `text`, `yaml`, etc.)
+- Output format (e.g., **json**, **text**, **yaml**, etc.)
 
-You can also use `aws configure sso`. This command is used to configure AWS CLI with Single Sign-On (SSO), which allows users to authenticate using AWS IAM Identity Center (formerly AWS SSO) or an identity provider such as Microsoft Active Directory, Okta, or others.
+We can also use **aws configure sso**. This command is used to configure AWS CLI with Single Sign-On (SSO), which allows users to authenticate using AWS IAM Identity Center (formerly AWS SSO) or an identity provider such as Microsoft Active Directory, Okta, or others.
 
 ## Article Overview
 [Brian's article](https://blog.localstack.cloud/aws-for-frontend-devs/) starts with an overview of AWS Infrastructure and AWS Security Basics.
@@ -60,7 +60,7 @@ For the web application building blocks we see:
 ## Running the code
 For the infrastructure setup for the services described above, Brian used the AWS CDK stack. Brian included the code for the article here: https://github.com/localstack-samples/aws-for-frontend-devs
 The README is quite clear. We will clone the code and try running it to see if it works for us. Mainly we just follow the README:
-To install all of the prerequisites, you can use the Makefile:
+To install all the prerequisites, you can use the Makefile:
 ```bash
 make install
 ```
