--- a/src/data/posts/aws-for-frontend-devs.mdx
+++ b/src/data/posts/aws-for-frontend-devs.mdx
@@ -29,7 +29,7 @@ What it Configures:
 - Access Key ID
 - Secret Access Key
 - Default region (e.g., us-east-1)
-- Output format (e.g., **json**, **text**, **yaml**, etc.)
+- Output format (e.g. **json**, **text**, **yaml**, etc.)
 
 We can also use **aws configure sso**. This command is used to configure AWS CLI with Single Sign-On (SSO), which allows users to authenticate using AWS IAM Identity Center (formerly AWS SSO) or an identity provider such as Microsoft Active Directory, Okta, or others.
 
