AWS with localstack

--- a/src/data/posts/aws-for-frontend-devs.mdx
+++ b/src/data/posts/aws-for-frontend-devs.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'AWS plus LocalStack'
+title: 'AWS with LocalStack'
 date: '2024-09-28'
 publishedAt: '2024-09-28'
 summary: 'My experience running code locally with LocalStack'
